# genrenames.py

./: .editorconfig  .gitattributes  .gitignore  .nojekyll  CHANGELOG.md  INSTALL.md  LICENSE.md  MANUAL.md  README.md  justfile  pyproject.toml
.github/workflows/: artifacts.yml  build-macos.yml.disabled
cli.build/: @link_input.txt  __loader.c  module.__main__.c  module.__main__.const  module.__parents_main__.c  module.__parents_main__.const  module.multiprocessing-preLoad.c  module.renames.c  module.renames.const  scons-report.txt
cli.build/static_src/: CompiledCellType.c  CompiledFunctionType.c  CompiledGeneratorType.c  InspectPatcher.c  MainProgram.c
cli.dist/: .DirIcon  AppRun  cli.desktop
doc/: genrenames.1  genrenames.md
ppa/: KEY.gpg
ppa/deb/: InRelease  Packages  Release  Release.gpg  create_ppa.sh  genrenames_0.2.0-release_any.deb  main.list  package_modified.sh
src/: __init__.py  cli.py  renames.py
test/: README.md  test_renames.py
