[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "genrenames-py"
version = "0.2.0"
description = "Create a `renames.txt` file from a tilesheet dump for `ftb-rs`."
authors = [ "Tomo <68489118+Tomodachi94@users.noreply.github.com>",]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
orderedset = "^2.0.3"
Nuitka = "^2.4.11"
